Update report style